# beedis

./: README.md  beegeo.py  config.json  datadis.py  functions.py  requirements.txt  setup.cfg  test.py
src/beedis/: __init__.py  datadis.py
tests/: beegeo.py  test.py
